--- a/CarManagmentSystem/Views/Shared/_Layout.cshtml
+++ b/CarManagmentSystem/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                 <ul class="navbar-nav " >
 
                     <li class="nav-item" >
-                        <a class="nav-link my-3 mx-5" aria-current="page" href="@Url.Action("Index", "Home")">Home</a>
+                        <a class="nav-link my-3 mx-5" aria-current="page" href="@Url.Action("Index", "CarShop")">Home</a>
                     </li>
 
                     <li class="nav-item">
