--- a/CarManagmentSystem/Views/Shared/_Layout.cshtml
+++ b/CarManagmentSystem/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <style>
         .nav-link {
             color: #FED766;
-            font-size:x-large;
+            font-size:large;
        
         }
     </style>
@@ -18,41 +18,51 @@
 </head>
 
 <body>
-    
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand text-warning fs-2" href="#">CarManagmentSystem</a>
+        <div class="container-fluid ">
+
+            <a class="navbar-brand text-warning p-4 fs-4" href="#">CarShop</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse " id="navbarNav">
-                <ul class="navbar-nav " >
+                <ul class="navbar-nav ">
 
-                    <li class="nav-item" >
-                        <a class="nav-link my-3 mx-5" aria-current="page" href="@Url.Action("Index", "CarShop")">Home</a>
+                    <li class="nav-item">
+                        <a class="nav-link  mx-5" aria-current="page" href="@Url.Action("Index", "CarShop")">Shop</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link my-3 mx-5" href="@Url.Action("About", "Home")">Features</a>
+                        <a class="nav-link mx-5" href="@Url.Action("About", "Home")">Sell</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link my-3 mx-5" href="#">Pricing</a>
+                        <a class="nav-link  mx-5" href="#">Service</a>
                     </li>
-               
+
+                    <li class="nav-item">
+                        <a class="nav-link  mx-5" href="#">Stores</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link  mx-5" href="#">Careers</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
     </nav>
-    
 
-    
 
-    <div class="container body-content">
+
+    @*class="container body-content"*@
+    <div>
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Car Managment System</p>
+            <p>&copy; @DateTime.Now.Year - Car Shop</p>
         </footer>
     </div>
 
