--- a/CarManagmentSystem/Views/Home/Index.cshtml
+++ b/CarManagmentSystem/Views/Home/Index.cshtml
@@ -4,7 +4,8 @@
     ViewBag.Title = "Home Page";
 }
 
-<style>
+@*<style>
+/*Video with text*/
     .container {
         max-width: auto;
         display: flex;
@@ -26,30 +27,147 @@
         margin-left: 20px;
         color: ghostwhite;
     }
-</style>
+    /*Video with text*/
 
 
+    /* Line on text */
+    .line-container {
+        position: relative;
+    }
+
+    .line {
+        width: 100%;
+        height: 2px;
+        background-color: #000;
+    }
+
+    .text-on-line {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #000;
+        background-color: #fff;
+        padding: 5px 10px;
+        border-radius: 5px;
+    }
+    /* Line on text */
+
+    .contact_index {
+        background-color: #540D6E;
+    }
+    .contact_button{
+        display:flex;
+        align-content:center;
+        justify-content:center;
+        padding-bottom: 70px;
+    }
+
+</style>*@
+
+<link rel="stylesheet" href="~/Content/MyCSS/IndexStylesheet.css">
 <main>
     <div class="container ">
         <div class="image-container">
-            <img src="~/Content/Images/CoverImage2.jpg" alt="Description of the image">
+            <video width="720" height="600" controls>
+                <source src="~/Content/Videos/video (2160p).mp4" />
+            </video>
         </div>
         <div class="text-container">
-            <p>At Car Shop, we offer a wide range of services to keep your car running smoothly.
-            From oil changes and tire rotations to engine repairs and transmission services,
-            we have the expertise and experience to handle all of your car's needs.
-            Our team of certified technicians is dedicated to providing you with the highest quality service at
-            a competitive price. We are also proud to offer a wide variety of parts and accessories to help you
-            customize your car to your liking. So whether you're looking for a quick oil change or a complete
-            engine overhaul, Car Shop is the place to go.</p>
+            <p>
+                At Car Shop, we offer a wide range of services to keep your car running smoothly.
+                From oil changes and tire rotations to engine repairs and transmission services,
+                we have the expertise and experience to handle all of your car's needs.
+                Our team of certified technicians is dedicated to providing you with the highest quality service at
+                a competitive price. We are also proud to offer a wide variety of parts and accessories to help you
+                customize your car to your liking. So whether you're looking for a quick oil change or a complete
+                engine overhaul, Car Shop is the place to go.
+            </p>
 
             <a class="btn btn-light mt-4" href="@Url.Action("Contact", "Home")">
                 Browse all cars
             </a>
         </div>
     </div>
+
+    <br />
+    <br />
+    <br />
+
+
+    <div class="line-container">
+        <div class="line"></div>
+        <div class="text-on-line">
+            <h3>
+                New Editions
+            </h3>
+        </div>
+    </div>
+
+    <br />
+    <br />
+    <br />
+
+
+    
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+                <div class="card h-100">
+                    <img src="~/Content/Images/CoverImage2.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated at @DateTime.Now</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="card h-100">
+                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-body-secondary">Last updated 3 mins ago</small>
+                    </div>
+                </div>
+            </div>
+        </div>
 </main>
 
+<br />
+<br />
+<br />
+
+<div class="contact_index">
+    <h2 style="font-style:italic">Contact Us</h2>
+    <p style="padding: 100px; color:aliceblue">
+        lWe value your feedback and inquiries. Whether you have a question about our products, need assistance,
+        or simply want to share your thoughts with us, we're here to help. Feel free to reach out to our
+        dedicated support team through the contact form below. We strive to respond promptly to all messages
+        and appreciate the opportunity to assist you. Thank you for choosing [Your Company Name] –
+        where your satisfaction is our priority.
+    </p>
+    <span class="contact_button">
+        <a class="btn btn-light">Contact Us</a>
+    </span>
+
+</div>
 
 
 
