--- a/CarManagmentSystem/Views/Home/Index.cshtml
+++ b/CarManagmentSystem/Views/Home/Index.cshtml
@@ -4,68 +4,33 @@
     ViewBag.Title = "Home Page";
 }
 
-@*<style>
-/*Video with text*/
-    .container {
-        max-width: auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 20px;
-        margin-top: 50px;
-        background-color: #000000;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+
+<link rel="stylesheet" type="text/css" href="@Url.Content("~/Content/MyCSS/IndexStylesheet.css")" media="screen">
+
+<style>
+    .serive_p {
+        padding: 80px;
+        color: aliceblue;
+        background-color: chartreuse;
     }
 
-    .image-container img {
-        max-width: 100%;
-        height: auto;
+    .contact_p {
+        padding: 100px;
+        color: aliceblue;
+    }
+    .sell_find {
+        font-style: italic;
+        padding: 100px;
+        color: aliceblue;
+        background-color: aquamarine;
     }
 
-    .text-container {
-        flex-grow: 1;
-        margin-left: 20px;
-        color: ghostwhite;
+    .text_italic {
+        font-style: italic;
     }
-    /*Video with text*/
+</style>
 
-
-    /* Line on text */
-    .line-container {
-        position: relative;
-    }
-
-    .line {
-        width: 100%;
-        height: 2px;
-        background-color: #000;
-    }
-
-    .text-on-line {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        color: #000;
-        background-color: #fff;
-        padding: 5px 10px;
-        border-radius: 5px;
-    }
-    /* Line on text */
-
-    .contact_index {
-        background-color: #540D6E;
-    }
-    .contact_button{
-        display:flex;
-        align-content:center;
-        justify-content:center;
-        padding-bottom: 70px;
-    }
-
-</style>*@
-
-<link rel="stylesheet" href="~/Content/MyCSS/IndexStylesheet.css">
 <main>
     <div class="container ">
         <div class="image-container">
@@ -155,19 +120,62 @@
 <br />
 
 <div class="contact_index">
-    <h2 style="font-style:italic">Contact Us</h2>
-    <p style="padding: 100px; color:aliceblue">
-        lWe value your feedback and inquiries. Whether you have a question about our products, need assistance,
+    <div class="contact_p">
+    <h2 class="text_italic">Contact Us</h2>
+        <p class="text_italic"> 
+        We value your feedback and inquiries. Whether you have a question about our products, need assistance,
         or simply want to share your thoughts with us, we're here to help. Feel free to reach out to our
         dedicated support team through the contact form below. We strive to respond promptly to all messages
-        and appreciate the opportunity to assist you. Thank you for choosing [Your Company Name] –
+        and appreciate the opportunity to assist you. Thank you for choosing Car Shop
         where your satisfaction is our priority.
+        </p>
+    </div>
+    <span class="contact_button">
+        <a class="btn btn-light" href="@Url.Action("Contact", "Home")">Contact Us</a>
+    </span>
+</div>
+
+<br />
+
+<div class="sell_find">
+    <h2 >Find our stores OR Sell your car online</h2>
+    <p >
+        Discover convenience like never before with our two distinct services - Find our stores or Sell your car
+        online. Whether you're in search of our physical stores to explore a wide range of automotive options,
+        receive personalized assistance, and experience hands-on vehicle inspection, or you prefer the seamless
+        and hassle-free process of selling your car online, we've got you covered. Our commitment to providing
+        choices ensures that you can choose the path that suits your needs best. Visit our stores to witness the
+        latest models and discuss your preferences with our knowledgeable staff, or opt for the online selling
+        platform for a swift and efficient transaction. Whichever option you choose, we are dedicated to making
+        your automotive experience both convenient and rewarding.
+    </p>
+    <div class="contact_button">
+        <span style="justify-content:space-between;">
+            <a class=" btn btn-light" href="@Url.Action("Contact", "Home")">Find our stores</a>
+            <a class="btn btn-light " href="@Url.Action("Contact", "Home")">Sell your car online</a>
+        </span>
+    </div>
+</div>
+
+<br />
+
+<div class="serive_p">
+    <h2 class="text_italic">Book a service for your car.</h2>
+    <p class="text_italic">
+        Elevate your car care experience by booking a service tailored to your vehicle's needs. Our seamless
+        online booking platform allows you to schedule maintenance or repairs effortlessly, ensuring your car
+        receives the attention it deserves. From routine inspections to specialized services, our expert
+        technicians are committed to keeping your vehicle running smoothly. Take the hassle out of car
+        maintenance and prioritize your time with our user-friendly booking system. Simply choose the service
+        you require, select a convenient time, and leave the rest to us. Enjoy peace of mind knowing that
+        your car is in the hands of professionals dedicated to maintaining its peak performance. Book a
+        service for your car today and embark on a journey of reliability and efficiency.
     </p>
     <span class="contact_button">
-        <a class="btn btn-light">Contact Us</a>
+        <a class="btn btn-light" href="@Url.Action("Contact", "Home")">Book Service</a>
     </span>
-
 </div>
+
 
 
 
