--- a/CarManagmentSystem/Views/Home/About.cshtml
+++ b/CarManagmentSystem/Views/Home/About.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewBag.Title = "About";
 }
-<main aria-labelledby="title">
+@*<main aria-labelledby="title">
     <h2 id="title">@ViewBag.Title.</h2>
     <h3>@ViewBag.Message</h3>
 
@@ -15,4 +15,4 @@
                 <div>@pro.Id</div>
             }
     </div>
-</main>
+</main>*@
