--- a/CarManagmentSystem/Views/Home/Contact.cshtml
+++ b/CarManagmentSystem/Views/Home/Contact.cshtml
@@ -2,8 +2,6 @@
     ViewBag.Title = "Contact";
 }
 <main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
-
-    <h1>Nothing</h1>
+   
+    <h1>This is the contact place</h1>
 </main>
