--- a/CarManagmentSystem/Content/MyCSS/IndexStylesheet.css
+++ b/CarManagmentSystem/Content/MyCSS/IndexStylesheet.css
@@ -47,14 +47,19 @@
 }
 /* Line on text */
 
+/*Index file CSS*/
+
 .contact_index {
     background-color: #540D6E;
+    padding:80px;
 }
 
 .contact_button {
+    font-style: italic;
     display: flex;
     align-content: center;
     justify-content: center;
+
 }
 
 .sell_find {
@@ -64,3 +69,43 @@
     background-color: aquamarine;
 }
 
+.serive_p {
+    padding: 80px;
+    color: aliceblue;
+    background-color: chartreuse;
+}
+
+.contact_p {
+    padding: 100px;
+    color: aliceblue;
+}
+
+.sell_find {
+    font-style: italic;
+    padding: 100px;
+    color: aliceblue;
+    background-color: aquamarine;
+}
+
+.text_italic {
+    font-style: italic;
+}
+
+/*Index file CSS*/
+
+/*Anchor tags*/
+.anchor_underline{
+    text-decoration:none;
+}
+
+.anchor_underline {
+    color: black;
+    text-decoration: none
+}
+
+.anchor_underline:hover {
+    color: inherit;
+    text-decoration: none
+}
+
+/*Anchor tags*/
