--- a/CarManagmentSystem/Views/Shared/_Layout.cshtml
+++ b/CarManagmentSystem/Views/Shared/_Layout.cshtml
@@ -31,23 +31,23 @@
                 <ul class="navbar-nav ">
 
                     <li class="nav-item">
-                        <a class="nav-link  mx-5" aria-current="page" href="@Url.Action("Index", "CarShop")">Shop</a>
+                        <a class="nav-link  mx-5" aria-current="page" href="@Url.Action("Shop", "CarShop")">Shop</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link mx-5" href="@Url.Action("About", "Home")">Sell</a>
+                        <a class="nav-link mx-5" href="@Url.Action("Sell", "CarShop")">Sell</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link  mx-5" href="#">Service</a>
+                        <a class="nav-link  mx-5" href="@Url.Action("Service", "CarShop")">Service</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link  mx-5" href="#">Stores</a>
+                        <a class="nav-link  mx-5" href="@Url.Action("Stores", "CarShop")">Stores</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link  mx-5" href="#">Careers</a>
+                        <a class="nav-link  mx-5" href="@Url.Action("Careers", "CarShop")">Careers</a>
                     </li>
 
                 </ul>
