Extended HTML code

--- a/CarManagmentSystem/Views/CarShop/Shop.cshtml
+++ b/CarManagmentSystem/Views/CarShop/Shop.cshtml
@@ -1,7 +1,30 @@
-﻿
+﻿@model List<CarManagmentSystem.Models.Cars>
 @{
     ViewBag.Title = "Shop";
 }
 
 <h2>Shop</h2>
+<main>
 
+    @foreach (var car in Model)
+    {
+        @*<div class="card">
+                <img src="data:image/jpeg;base64,@(Convert.ToBase64String(car.Image))" style="width:50px; height:50px" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">@car.Name</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>*@
+
+        var Cars = car;
+
+    <div class="card" style="width: 18rem;">
+        <img src="data:image/jpeg;base64,@(Convert.ToBase64String(Cars.Image))" style="width:50px; height:50px" class="card-img-top" alt="...">
+        <div class="card-body">
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+    </div>
+    }
+
+</main>
