--- a/CarManagmentSystem/Content/MyCSS/IndexStylesheet.css
+++ b/CarManagmentSystem/Content/MyCSS/IndexStylesheet.css
@@ -109,3 +109,11 @@
 }
 
 /*Anchor tags*/
+
+
+.cards {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: auto;
+    grid-gap: 1rem;
+}
