Extended HTML code

--- a/CarManagmentSystem/Views/CarShop/Shop.cshtml
+++ b/CarManagmentSystem/Views/CarShop/Shop.cshtml
@@ -3,28 +3,30 @@
     ViewBag.Title = "Shop";
 }
 
-<h2>Shop</h2>
+
 <main>
 
-    @foreach (var car in Model)
-    {
-        @*<div class="card">
-                <img src="data:image/jpeg;base64,@(Convert.ToBase64String(car.Image))" style="width:50px; height:50px" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <h5 class="card-title">@car.Name</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+   
+       
+
+    <div class="container">
+        <div class="row row-cols-1 row-cols-md-3 g-4   ">
+            @foreach (var car in Model)
+            {
+                <div class="col">
+                    <div class="card">
+                        <img src="data:image/jpeg;base64,@(Convert.ToBase64String(car.Image))" style="width:100%; height:200px" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <small class="card-text"><b>@car.Miles K Miles &nbsp; @car.Year</b> </small> 
+                            <h6 class="card-title">@car.Name</h6>
+                            <p class="card-text">@car.Company &nbsp;  <b>$@car.Price</b></p>
+                            <p class="card-text">@car.Type</p>
+                        </div>
+                    </div>
                 </div>
-            </div>*@
-
-        var Cars = car;
-
-    <div class="card" style="width: 18rem;">
-        <img src="data:image/jpeg;base64,@(Convert.ToBase64String(Cars.Image))" style="width:50px; height:50px" class="card-img-top" alt="...">
-        <div class="card-body">
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            }
         </div>
     </div>
-    }
+    
 
 </main>
