--- a/CarManagmentSystem/Views/Shared/_Layout.cshtml
+++ b/CarManagmentSystem/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid ">
 
-            <a class="navbar-brand text-warning p-4 fs-4" href="#">CarShop</a>
+            <a class="navbar-brand text-warning p-4 fs-4" href="@Url.Action("Index", "Home")">CarShop</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
