Modified controller and cshtml file

--- a/CarManagmentSystem/Views/Shared/_Layout.cshtml
+++ b/CarManagmentSystem/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link  mx-5" href="@Url.Action("Stores", "CarShop")">Stores</a>
+                        <a class="nav-link  mx-5" href="@Url.Action("Stores", "Stores")">Stores</a>
                     </li>
 
                     <li class="nav-item">
