--- a/CarManagmentSystem/Views/CarShop/Careers.cshtml
+++ b/CarManagmentSystem/Views/CarShop/Careers.cshtml
@@ -4,6 +4,11 @@
 }
 <main aria-label="title">
 
+    <h4 class="card-title m-4">
+        <span class="justify-content-center">
+
+        Oops! It seems like there are no jobs at the moment.
+        </span>
+    </h4>
 </main>
-<h2>Careers</h2>
 
