--- a/CarManagmentSystem/Views/CarShop/Shop.cshtml
+++ b/CarManagmentSystem/Views/CarShop/Shop.cshtml
@@ -10,7 +10,7 @@
        
 
     <div class="container">
-        <div class="row row-cols-1 row-cols-md-3 g-4   ">
+        <div class="row row-cols-1 row-cols-md-3 g-4 m-1  ">
             @foreach (var car in Model)
             {
                 <div class="col">
