Added basic set up for model, controller and view

--- a/CarManagmentSystem/Views/Shared/_Layout.cshtml
+++ b/CarManagmentSystem/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link  mx-5" href="@Url.Action("Service", "CarShop")">Service</a>
+                        <a class="nav-link  mx-5" href="@Url.Action("ServiceTable", "ServiceData")">Service</a>
                     </li>
 
                     <li class="nav-item">
